implementando add preço no produto (mock)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 logging.level.root=INFO
 logging.level.org.springframework=INFO
-logging.level.com.grupo16.usuarioservice=TRACE
+logging.level.com.grupo16.carrinhoservice=TRACE
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/carrinho_service
