--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,13 @@
+server.port=0
+spring.application.name=carrinho-service
+
 logging.level.root=INFO
 logging.level.org.springframework=INFO
 logging.level.com.grupo16.carrinhoservice=TRACE
+
+management.endpoints.enabled-by-default=true
+management.endpoint.info.enabled=true
+management.endpoints.web.exposure.include=health,info
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/carrinho_service
@@ -17,5 +24,5 @@ spring.datasource.hikari.maxLifetime=1800000
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
-spring.jpa.generate-ddl=false
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=none
